[gd_scene load_steps=6 format=3 uid="uid://gwkc83yiivw7"]

[ext_resource type="Texture2D" uid="uid://bk53nuxihpvy5" path="res://ui/assets/minion/move_menu_bg.png" id="1_dgn76"]
[ext_resource type="Script" path="res://ui/battle/move_menu.gd" id="2_asxll"]
[ext_resource type="Texture2D" uid="uid://cxb580x03a0fl" path="res://ui/assets/minion/battleScreenfillBarenergyFill.png" id="3_fvrty"]
[ext_resource type="FontFile" uid="uid://rscyjpse26wp" path="res://ui/assets/Burbin Casual NC.ttf" id="4_qirll"]

[sub_resource type="LabelSettings" id="LabelSettings_6y1fv"]
font = ExtResource("4_qirll")
font_size = 7

[node name="MoveMenu" type="TextureRect"]
offset_top = -350.0
offset_right = 259.0
offset_bottom = -175.0
scale = Vector2(2, 2)
mouse_filter = 2
texture = ExtResource("1_dgn76")
script = ExtResource("2_asxll")

[node name="HBox" type="HBoxContainer" parent="."]
use_parent_material = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Margin1" type="MarginContainer" parent="HBox"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 25

[node name="VBox" type="VBoxContainer" parent="HBox/Margin1"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 24

[node name="Move1" type="TextureButton" parent="HBox/Margin1/VBox"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2

[node name="Move4" type="TextureButton" parent="HBox/Margin1/VBox"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 5

[node name="Margin2" type="MarginContainer" parent="HBox"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 22

[node name="VBox" type="VBoxContainer" parent="HBox/Margin2"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 30

[node name="Move2" type="TextureButton" parent="HBox/Margin2/VBox"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2

[node name="Move5" type="TextureButton" parent="HBox/Margin2/VBox"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2

[node name="Margin3" type="MarginContainer" parent="HBox"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 25

[node name="VBox" type="VBoxContainer" parent="HBox/Margin3"]
use_parent_material = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 24

[node name="Move3" type="TextureButton" parent="HBox/Margin3/VBox"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2

[node name="Move6" type="TextureButton" parent="HBox/Margin3/VBox"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 5

[node name="EnergyBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 2
offset_left = 93.5
offset_top = 81.0
offset_right = 163.5
offset_bottom = 94.0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource("3_fvrty")

[node name="Energy" type="Label" parent="EnergyBar"]
unique_name_in_owner = true
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.5
offset_top = -6.5
offset_right = 19.5
offset_bottom = 5.5
grow_horizontal = 2
grow_vertical = 2
text = "500/500"
label_settings = SubResource("LabelSettings_6y1fv")
horizontal_alignment = 1
vertical_alignment = 1
